force-app/main/default/objects/cpm__Custom_Remote_Site_Setting__c/cpm__Custom_Remote_Site_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Registration of the remote site settings that needs to be implemented</description>
    <label>Custom Remote Site Setting</label>
</CustomObject>