force-app/main/default/objects/cpm__Custom_Remote_Site_Setting__c/fields/cpm__IsActive__c.field-meta.xml
<CustomField>
    <fullName>cpm__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wether the custom remote site setting is activated or not.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>