force-app/main/default/objects/cpm__Custom_Remote_Site_Setting__c/fields/cpm__Provided_By__c.field-meta.xml
<CustomField>
    <fullName>cpm__Provided_By__c</fullName>
    <description>The Package the Setting belongs to.</description>
    <label>Provided By</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>