force-app/main/default/objects/cpm__Custom_Remote_Site_Setting__c/fields/cpm__URL__c.field-meta.xml
<CustomField>
    <fullName>cpm__URL__c</fullName>
    <description>The endpoint of the custom remote site setting.</description>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>