force-app/main/default/objects/cpm__Custom_Remote_Site_Setting__c/fields/cpm__Uses_Metadata_API__c.field-meta.xml
<CustomField>
    <fullName>cpm__Uses_Metadata_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true is this remote site setting used the metadata api.</description>
    <label>Uses Metadata API</label>
    <type>Checkbox</type>
</CustomField>